--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 fastapi = "^0.89.0"
 fastapi-health = "^0.4.0"
 fastapi-pagination = { extras = ["sqlalchemy"], version = "^0.9.1" }
+json-logging = "^1.3.0"
 python-slugify = "^6.1.2"
 requests = "^2.28"
 requests-toolbelt = "^0.10.1"
