--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,14 @@ python = "^3.9"
 fastapi = "^0.89.0"
 fastapi-health = "^0.4.0"
 fastapi-pagination = { extras = ["sqlalchemy"], version = "^0.9.1" }
-json-logging = "^1.3.0"
 python-slugify = "^6.1.2"
 requests = "^2.28"
 requests-toolbelt = "^0.10.1"
 SQLAlchemy = "^1.4.31"
 SQLAlchemy-Utils = "^0.38.2"
 uvicorn = { extras = ["standard"], version = "^0.20.0" }
+json-logging = "^1.3.0"
+httpx = "^0.24.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
