--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ requests-toolbelt = "^0.10.1"
 SQLAlchemy = "^1.4.31"
 SQLAlchemy-Utils = "^0.38.2"
 uvicorn = { extras = ["standard"], version = "^0.20.0" }
+json-logging = "^1.3.0"
+httpx = "^0.24.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
