--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ SQLAlchemy-Utils = "^0.38.2"
 uvicorn = { extras = ["standard"], version = "^0.20.0" }
 json-logging = "^1.3.0"
 httpx = "^0.24.1"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
