Add a database with integration tests (#3)
* add the db sqlalchemy code

* add psycopg2-binary

* add the lock file

* Add Integration tests

* Remove the repository unit tests

* remove need for tty when populating db

* Pipe db load output to file

* complete transition to a database

* Fix unit tests

* update the documentation

* bolster tests

* fix integration tests

* id service, more tests and error handling

* Add exceptions and more tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,14 @@ jobs:
       - name: Build
         run: make build
 
-      - name: Run Tests
-        run: make test
+      - name: Run Unit Tests
+        run: make unit_test
+
+      - name: Setup test db
+        run: make setup_test_db
+
+      - name: Run Integration Tests
+        run: make integration_test
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
