--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ json-logging = "^1.3.0"
 httpx = "^0.24.1"
 psycopg2-binary = "^2.9.3"
 pylint = "^2.17.4"
+pyjwt = "^2.8.0"
+passlib = "^1.7.4"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
