--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ psycopg2-binary = "^2.9.3"
 pylint = "^2.17.4"
 pyjwt = "^2.8.0"
 passlib = "^1.7.4"
+python-multipart = "^0.0.6"
+pip = "^23.2.1"
+poetry = "^1.6.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
