--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ python-multipart = "^0.0.6"
 pip = "^23.2.1"
 poetry = "^1.6.1"
 boto3 = "^1.28.46"
+moto = "^4.2.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
