--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pip = "^23.2.1"
 poetry = "^1.6.1"
 boto3 = "^1.28.46"
 moto = "^4.2.2"
+types-sqlalchemy = "^1.4.53.38"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
@@ -34,7 +35,7 @@ pytest = "^7.0.1"
 pytest-dotenv = "^0.5.2"
 pytest-mock = "^3.7.0"
 black = "^23.1.0"
-pyright = "^1.1.294"
+pyright = "1.1.294"
 pytest-asyncio = "^0.18.3"
 ruff = "^0.0.246"
 
