--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ poetry = "^1.6.1"
 boto3 = "^1.28.46"
 moto = "^4.2.2"
 types-sqlalchemy = "^1.4.53.38"
+urllib3 = "^1.26.17"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
