--- a/scripts/testing/config
+++ b/scripts/testing/config
@@ -3,8 +3,9 @@
 #
 # It is your responsibility to set the SUPERUER_xxx vars.
 #
-export TEST_URL=https://m2bv8pdzts.eu-west-1.awsapprunner.com
-#export TEST_URL=http://localhost:8888
+set -x
+#export TEST_URL=https://m2bv8pdzts.eu-west-1.awsapprunner.com
+export TEST_URL=http://localhost:8888
 
 get_token() {
     curl -s \
