--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ SQLAlchemy-Utils = "^0.38.2"
 uvicorn = { extras = ["standard"], version = "^0.20.0" }
 json-logging = "^1.3.0"
 httpx = "^0.24.1"
-psycopg2-binary = "^2.9.3"
 pylint = "^2.17.4"
 pyjwt = "^2.8.0"
 passlib = "^1.7.4"
@@ -28,6 +27,8 @@ boto3 = "^1.28.46"
 moto = "^4.2.2"
 types-sqlalchemy = "^1.4.53.38"
 urllib3 = "^1.26.17"
+asyncpg = "^0.28.0"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
