--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install "poetry==1.6.1" && poetry install && poetry run pre-commit install
+
+      - name: Run pre-commit checks
+        run: |
+          poetry run pre-commit run --all-files
+
       - name: Build
         run: make build
 
@@ -34,9 +47,6 @@ jobs:
 
       - name: Run Integration Tests
         run: make integration_test
-
-      - name: Run Git Hooks
-        run: make git_hooks
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
