--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install "poetry==1.6.1" && poetry install && poetry run pre-commit install
+
+      - name: Run pre-commit checks
+        run: |
+          poetry run pre-commit run --all-files
+
       - name: Build
         run: make build
 
