--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run tests
-        run:  make test_bashscripts
+        run: make test_bashscripts
 
   build-start-test:
     runs-on: ubuntu-latest
@@ -32,10 +32,6 @@ jobs:
         run: |
           python -m pip install "poetry==1.6.1" && poetry install && poetry run pre-commit install
 
-      - name: Run pre-commit checks
-        run: |
-          poetry run pre-commit run --all-files
-
       - name: Build
         run: make build
 
@@ -47,6 +43,16 @@ jobs:
 
       - name: Run Integration Tests
         run: make integration_test
+
+      - name: Run pre-commit checks
+        run: |
+          poetry run pre-commit run --all-files
+
+      - name: Run Markdown linting
+        uses: DavidAnson/markdownlint-cli2-action@v13
+        with:
+          fix: true
+          globs: "**/*.md"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
