--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,14 +4,14 @@ repos:
     hooks:
       - id: check-json
       - id: detect-aws-credentials
-        args: [ --allow-missing-credentials ]
+        args: [--allow-missing-credentials]
   - repo: https://github.com/ambv/black
     rev: 23.1.0
     hooks:
       - id: black
         language_version: python3
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.246'
+    rev: "v0.0.246"
     hooks:
       - id: ruff
   - repo: local
@@ -21,6 +21,14 @@ repos:
         entry: pyright
         language: node
         types: [python]
-        additional_dependencies: ['pyright@1.1.294']
-
+        additional_dependencies: ["pyright@1.1.294"]
+  - repo: local
+    hooks:
+      - id: markdownlint-cli2-fix-rules-docker
+        name: markdownlint (admin-backend)
+        description: "Checks and fixes the style of Markdown files."
+        entry: davidanson/markdownlint-cli2-rules markdownlint-cli2-fix
+        language: docker_image
+        types: [markdown]
+        minimum_pre_commit_version: 0.15.0
 # TODO more checks? e.g. bandit, safety, snyk, ...
