--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,15 @@ jobs:
       - name: Run Integration Tests
         run: make integration_test
 
-      - name: Run Auto-tagging
+        - name: Run Auto-tagging
+        # The user controlled input needs to be santitised beforehand e.g., by adding an intermediate env var
+        # to prevent the workflow being exposed to a critical command injection attack
+        env:
+          BODY: ${{ github.event.pull_request.body }}
         run: |
           git fetch --prune --unshallow --tags
           latest_tag=$(git describe --tags --abbrev=0)
-          .github/auto-tag.sh ${latest_tag} ${{ github.event.pull_request.body }}
+          .github/auto-tag.sh ${latest_tag} ${BODY}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
