--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ on:
       - main
 
 # https://github.com/marketplace/actions/docker-layer-caching
+#
+# User controlled input needs to be santitised beforehand e.g., by adding an
+# intermediate env var to prevent the workflow being exposed to a critical
+# command injection attack
 jobs:
   test-bash:
     runs-on: ubuntu-latest
@@ -49,8 +53,6 @@ jobs:
         run: make integration_test
 
         - name: Run Auto-tagging
-        # The user controlled input needs to be santitised beforehand e.g., by adding an intermediate env var
-        # to prevent the workflow being exposed to a critical command injection attack
         env:
           BODY: ${{ github.event.pull_request.body }}
         run: |
