PDCT-716 copy .env in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
         run: |
           poetry run pre-commit run --all-files
 
+      - name: Use .env.example
+        run:  cp .env.example .env
+
       - name: Build
         run: make build
 
