PDCT-716 adapt .env.copy

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ ADMIN_POSTGRES_HOST=admin_backend_db
 
 # API
 SECRET_KEY=secret_test_key
-API_HOST=http://admin_backend:8888
+API_HOST=http://navigator-admin-backend:8888
 
 # Backend Superuser account information for admin
 SUPERUSER_EMAIL=user@navigator.com
