--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         env:
           BODY: ${{ github.event.pull_request.body }}
         run: |
-          git fetch --prune --unshallow --tags 2>&1 /dev/null
+          git fetch --prune --unshallow --tags | 2>&1 /dev/null
           latest_tag=$(git describe --tags --abbrev=0)
           .github/auto-tag.sh ${latest_tag} "${BODY}"
 
