--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,9 +55,7 @@ jobs:
         env:
           BODY: ${{ github.event.pull_request.body }}
         run: |
-          git fetch --prune --unshallow --tags
-          latest_tag=$(git describe --tags --abbrev=0)
-          .github/auto-tag.sh ${latest_tag} "${BODY}"
+          .github/auto-tag.sh "${BODY}"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
