PDCT-716/Make-library-for-alembic-db-schema (#62)
* PDCT-716 remove db stuff, use navigator_db_client library and adapt code

* PDCT-716 move error types to the library

* PDCT-716 fix some error imports

* adapt to new name package

* PDCT-716 include session again

* PDCT-716 fix refactor in conftest

* PDCT-716 update db-client version

* PDCT-716 run migrations (incomplete)

* PDCT-716 create docker compose for deploy and test in local, env.example and adapt make commands for build and start

* PDCT-716 adapt make commands and CI

* PDCT-716 copy .env in CI

* PDCT-716 rename docker image again as navigator-admin-backend

* PDCT-716 adapt .env.copy

* PDCT-716 revert errors move

* PDCT-716 stop to create superuser and update db-client version

* PDCT-716 remove white space

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,14 +36,14 @@ jobs:
         run: |
           poetry run pre-commit run --all-files
 
+      - name: Use .env.example
+        run: cp .env.example .env
+
       - name: Build
         run: make build
 
       - name: Run Unit Tests
         run: make unit_test
-
-      - name: Setup test db
-        run: make setup_test_db
 
       - name: Run Integration Tests
         run: make integration_test
