--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -19,3 +19,4 @@ jobs:
           echo "${GITHUB_REF}"
           echo "${GITHUB_REF_NAME}"
           echo "${GITHUB_REPOSITORY}"
+          echo "${GITHUB_HEAD_REF}"
