--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -19,9 +19,13 @@ jobs:
               })
             ).data[0];
 
-    - name: Pull Request data
+    - name: Run Auto-tagging
+      # User controlled input needs to be santitised beforehand e.g., by adding an
+      # intermediate env var to prevent the workflow being exposed to a critical
+      # command injection attack
+      env:
+        PR_BODY: '${{ fromJson(steps.get_pr_data.outputs.result).body }}'
+        PR_NUMBER: '${{ fromJson(steps.get_pr_data.outputs.result).number }}'
       run: |
-        echo '${{ fromJson(steps.get_pr_data.outputs.result).number }}'
-        echo '${{ fromJson(steps.get_pr_data.outputs.result).title }}'
-        echo '${{ fromJson(steps.get_pr_data.outputs.result).body }}'
-
+        echo "Attempting to auto-tag merge commit"
+        .github/auto-tag.sh "${PR_BODY}" "${PR_NUMBER}"
