--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -19,6 +19,7 @@ jobs:
               })
             ).data[0];
 
+    - uses: actions/checkout@v2
     - name: Run Auto-tagging
       # User controlled input needs to be santitised beforehand e.g., by adding an
       # intermediate env var to prevent the workflow being exposed to a critical
