--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -21,6 +21,7 @@ jobs:
               })
             ).data[0];
 
+    - uses: fregante/setup-git-user@v2
     - uses: actions/checkout@v2
     - name: Run Auto-tagging
       # User controlled input needs to be santitised beforehand e.g., by adding an
