--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -1,9 +1,9 @@
 name: main push git autotag
 
 on:
-  push #:
-    # branches:
-    #   - main
+  push:
+    branches:
+      - main
 
 jobs:
   auto-git-tag:
