--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -22,6 +22,7 @@ jobs:
             ).data[0];
 
     - uses: actions/checkout@v2
+    - uses: fregante/setup-git-user@v2
     - name: Run Auto-tagging
       # User controlled input needs to be santitised beforehand e.g., by adding an
       # intermediate env var to prevent the workflow being exposed to a critical
