Run semver Docker tagging after git autotagging and on manual tag.

--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - v*
 
+  workflow_run:
+    workflows: ["main push git autotag"]
+    types:
+      - completed
+
 env:
   DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
