--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -40,3 +40,29 @@ jobs:
         echo "Attempting to auto-tag merge commit"
         new_tag=$(.github/auto-tag.sh "${PR_BODY}" "${PR_NUMBER}")
         echo "new_tag=${new_tag}"  >> "$GITHUB_OUTPUT"
+
+  auto-semver-tag:
+    needs: auto-git-tag
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1.6.1
+
+      - name: Docker pull, retag and push
+        env:
+          NEW_TAG: ${{needs.auto-git-tag.outputs.new_tag}}
+          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          .github/retag-and-push.sh navigator-admin-backend ${NEW_TAG}
