--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -5,7 +5,7 @@ on:
     tags: ['v[0-9]+.[0-9]+.[0-9]+']
 
   workflow_run:
-    workflows: ["main push git autotag"]
+    workflows: ["CI"]
     types:
       - completed
 
