Pull docker image before tagging.

--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -65,4 +65,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
+          docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-d62fb12f
           .github/retag-and-push.sh navigator-admin-backend main-d62fb12f
