Force tag image before retagging with as new semver.

--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -66,4 +66,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-d62fb12f
+          docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-d62fb12f  navigator-admin-backend:main-d62fb12f
           .github/retag-and-push.sh navigator-admin-backend main-d62fb12f
