--- a/.github/workflows/main-push-git-autotag.yml
+++ b/.github/workflows/main-push-git-autotag.yml
@@ -65,6 +65,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-dceb7695
-          docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-dceb7695  navigator-admin-backend:main-dceb7695
-          .github/retag-and-push.sh navigator-admin-backend main-dceb7695
+          .github/retag-and-push.sh navigator-admin-backend main-${GITHUB_SHA::8}
