Fix auto semver tagging for auto generated git tags (#71)

--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -2,11 +2,10 @@ name: Semver Tagging
 
 on:
   push:
-    tags:
-      - v*
+    tags: ['v[0-9]+.[0-9]+.[0-9]+']
 
   workflow_run:
-    workflows: ["main push git autotag"]
+    workflows: ["CI"]
     types:
       - completed
 
