--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,15 +10,7 @@ on:
 
 # https://github.com/marketplace/actions/docker-layer-caching
 jobs:
-  test-bash:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Run tests
-        run: make test_bashscripts
-
-  build-start-test:
+  pre-commits:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -36,14 +28,30 @@ jobs:
         run: |
           poetry run pre-commit run --all-files
 
-      - name: Build
-        run: make build
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Run tests
+        run: make test_bashscripts
 
       - name: Run Unit Tests
         run: make unit_test
 
       - name: Run Integration Tests
         run: make integration_test
+
+  build:
+    runs-on: ubuntu-latest
+    needs:
+      - pre-commits
+      - test
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build
+        run: make build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
