--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 # https://github.com/marketplace/actions/docker-layer-caching
 jobs:
-  pre-commits:
+  code-quality:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -45,7 +45,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs:
-      - pre-commits
+      - code-quality
       - test
     steps:
       - uses: actions/checkout@v2
