--- a/.github/workflows/main-push-autotag.yml
+++ b/.github/workflows/main-push-autotag.yml
@@ -70,4 +70,6 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
+          docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:latest
+          docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:latest  navigator-admin-backend:latest
           .github/retag-and-push.sh navigator-admin-backend latest
