--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -5,7 +5,7 @@ on:
     tags: ['v[0-9]+.[0-9]+.[0-9]+']
 
 jobs:
-  tag-main-with-semver:
+  manual-semver-tag:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
