--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install "poetry==1.6.1" && poetry install && poetry run pre-commit install
+          python -m pip install "poetry==1.6.1"
+          poetry install --only dev
+          poetry run pre-commit install
 
       - name: Run pre-commit checks
         run: |
