--- a/.github/workflows/main-push-autotag.yml
+++ b/.github/workflows/main-push-autotag.yml
@@ -26,7 +26,7 @@ jobs:
               })
             ).data[0];
 
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - uses: fregante/setup-git-user@v2
     - name: Run Auto-tagging
       id: run_git_auto_tag
@@ -44,12 +44,13 @@ jobs:
         fi
         script_output=$(echo "${new_tag}" | tail -n 1)
         echo "new_tag=${script_output}"  >> "$GITHUB_OUTPUT"
+      shell: bash {0}
 
   auto-semver-tag:
     needs: auto-git-tag
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -69,4 +70,6 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
+          docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}
+          docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}  navigator-admin-backend:main-${GITHUB_SHA::8}
           .github/retag-and-push.sh navigator-admin-backend main-${GITHUB_SHA::8}
