--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -1,24 +1,14 @@
-name: Semver Tagging
+name: Semver Tagging for Manually Created Versions
 
 on:
   push:
     tags: ['v[0-9]+.[0-9]+.[0-9]+']
 
-  workflow_run:
-    workflows: ["CI"]
-    types:
-      - completed
-
-env:
-  DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
 jobs:
-  tag-main-with-semver:
+  manual-semver-tag:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -32,6 +22,10 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1.6.1
 
       - name: Docker pull, retag and push
+        env:
+          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}
           docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}  navigator-admin-backend:main-${GITHUB_SHA::8} 
