--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,13 +1,15 @@
-name: main push autotag
+name: Auto-Tag
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: [build]
+    types:
+      - completed
 
 jobs:
-  auto-git-tag:
+  auto-git-and-semver-tag:
     runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/main' && github.event.workflow_run.conclusion == 'success' }}
 
     # Expose step outputs as job outputs
     outputs:
@@ -28,7 +30,7 @@ jobs:
 
     - uses: actions/checkout@v4
     - uses: fregante/setup-git-user@v2
-    - name: Run Auto-tagging
+    - name: Determine new tag version
       id: run_git_auto_tag
       # User controlled input needs to be santitised beforehand e.g., by adding an
       # intermediate env var to prevent the workflow being exposed to a critical
@@ -46,8 +48,37 @@ jobs:
         echo "new_tag=${script_output}"  >> "$GITHUB_OUTPUT"
       shell: bash {0}
 
-  auto-semver-tag:
-    needs: auto-git-tag
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1.6.1
+
+    - name: Docker pull, retag and push
+      env:
+        NEW_TAG: ${{ steps.run_git_auto_tag.outputs.new_tag }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}
+        docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}  navigator-admin-backend:main-${GITHUB_SHA::8}
+        .github/retag-and-push.sh navigator-admin-backend main-${GITHUB_SHA::8}
+
+    - name: Create and push Git tag
+      run: |
+        new_tag=${{ steps.run_git_auto_tag.outputs.new_tag }}
+        new_version_num=${new_tag#v}
+        git tag -a "${new_tag}" -m "Version ${new_version_num}"
+        git push --tags origin "${new_tag}"
+
+  semver-for-manually-created-tags:
+    if: ${{ startsWith(github.ref, 'refs/tags/') && github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -61,11 +92,10 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1.6.1
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Docker pull, retag and push
         env:
-          NEW_TAG: ${{needs.auto-git-tag.outputs.new_tag}}
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
