Update workflow name and added tag push as workflow trigger.

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -2,9 +2,12 @@ name: Auto-Tag
 
 on:
   workflow_run:
-    workflows: [build]
+    workflows: ["CI"]
     types:
       - completed
+
+  push:
+    tags: ['v[0-9]+.[0-9]+.[0-9]+']
 
 jobs:
   auto-git-and-semver-tag:
@@ -78,7 +81,7 @@ jobs:
         git push --tags origin "${new_tag}"
 
   semver-for-manually-created-tags:
-    if: ${{ startsWith(github.ref, 'refs/tags/') && github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
