Revert "Attempt to trigger tag workflow after CI workflow completion"
This reverts commit ea3b594930c0169fb75adf71c0126c61cc73b1d5.

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -2,9 +2,12 @@ name: Auto-Tag
 
 on:
   workflow_run:
-    workflows: [CI]
+    workflows: ["CI"]
     types:
       - completed
+
+  push:
+    tags: ['v[0-9]+.[0-9]+.[0-9]+']
 
 jobs:
   auto-git-and-semver-tag:
