--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,51 @@ on:
 
 # https://github.com/marketplace/actions/docker-layer-caching
 jobs:
+  code-quality:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.9"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install "poetry==1.6.1" && poetry install && poetry run pre-commit install
+
+      - name: Run pre-commit checks
+        run: |
+          poetry run pre-commit run --all-files
+
+      - name: Check code contains no FIXME's
+        run: |
+          git grep -r --no-color ${case_sensitive} --line-number -e "FIXME" :^.github
+          if [[ $? -eq 0 ]]; then
+            # if we found any FIXME entries in checked in files, fail on main
+            exit 1
+          else
+            exit 0
+          fi
+        shell: bash {0}
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Configure test env variables
+        run: cp .env.example .env
+
+      - name: Test bash scripts
+        run: make test_bashscripts
+
+      - name: Run Unit Tests
+        run: make unit_test
+
+      - name: Run Integration Tests
+        run: make integration_test
 
   build:
     runs-on: ubuntu-latest
