--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   auto-git-and-semver-tag:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main' && github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     # Expose step outputs as job outputs
     outputs:
@@ -46,6 +46,7 @@ jobs:
         script_output=$(set -e .github/auto-tag.sh "${PR_BODY}" "${PR_NUMBER}")
         script_output=$(set -e echo "${new_tag}" | tail -n 1)
         echo "new_tag=${script_output}"  >> "$GITHUB_OUTPUT"
+      shell: bash
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
