--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -44,7 +44,11 @@ jobs:
       run: |
         echo "Attempting to auto-tag merge commit"
         script_output=$(set -e; .github/auto-tag.sh "${PR_BODY}" "${PR_NUMBER}")
+        if $? != 0; then
+          exit 1
+        fi
         script_output=$(set -e; echo "${new_tag}" | tail -n 1)
+        echo "New tag version: ${script_output}"
         echo "new_tag=${script_output}"  >> "$GITHUB_OUTPUT"
 
     - name: Configure AWS credentials
@@ -77,7 +81,7 @@ jobs:
         git push --tags origin "${new_tag}"
 
   semver-for-manually-created-tags:
-    if: ${{ startsWith(github.ref, 'refs/tags/') && github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
