Fix new_tag returning empty in ci (#81)

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -6,9 +6,6 @@ on:
     types:
       - completed
 
-  push:
-    tags: ['v*']
-
 jobs:
   auto-git-and-semver-tag:
     runs-on: ubuntu-latest
@@ -43,11 +40,11 @@ jobs:
         PR_NUMBER: '${{ fromJson(steps.get_pr_data.outputs.result).number }}'
       run: |
         echo "Attempting to auto-tag merge commit"
-        script_output=$(set -e; .github/auto-tag.sh "${PR_BODY}" "${PR_NUMBER}")
+        script_output=$(.github/auto-tag.sh "${PR_BODY}" "${PR_NUMBER}")
         if $? != 0; then
           exit 1
         fi
-        script_output=$(set -e; echo "${new_tag}" | tail -n 1)
+        script_output=$(echo "${new_tag}" | tail -n 1)
         echo "New tag version: ${script_output}"
         echo "new_tag=${script_output}"  >> "$GITHUB_OUTPUT"
 
