Add config to set new auto release as latest

--- a/.github/workflows/tag-and-release.yml
+++ b/.github/workflows/tag-and-release.yml
@@ -118,5 +118,6 @@ jobs:
       with:
         token: "${{ secrets.GITHUB_TOKEN }}"
         generateReleaseNotes: true
+        makeLatest: true
         prerelease: false
         tag: ${{needs.auto-git-and-semver-tag.outputs.new_tag}}
