Update build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,10 +80,16 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Push Images to ECR
-        run: |
-          docker push navigator-admin-backend:latest
         env:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
+          branch="$(echo ${GITHUB_HEAD_REF}| tr -c '[0-9,A-Z,a-z]' '-')"
+          timestamp=$(date --utc -Iseconds | cut -c1-19 | tr -c '[0-9]T\n' '-')
+          short_sha=${GITHUB_SHA:0:8}
+          docker tag navigator-admin-backend "$ECR_REGISTRY/navigator-admin-backend:${branch}-${timestamp}-${short_sha}"
+          docker push "$ECR_REGISTRY/navigator-admin-backend:${branch}-${timestamp}-${short_sha}"
+
 
   tag:
     needs: build
