Run trunk on all files

--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -19,6 +19,9 @@ jobs:
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
+        with:
+          check-mode: all
+          arguments: --github-annotate-new-only=false
 
       - name: Check code contains no FIXME's
         run: |
