--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ boto3 = "^1.28.46"
 moto = "^4.2.2"
 types-sqlalchemy = "^1.4.53.38"
 urllib3 = "^1.26.17"
-db-client = {git = "https://github.com/climatepolicyradar/navigator-db-client.git", tag = "v2.0.3"}
+db-client = { git = "https://github.com/climatepolicyradar/navigator-db-client.git", tag = "v2.0.3" }
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
@@ -51,9 +51,7 @@ env_files = """
     .env.test
     .env
 """
-markers = [
-    "unit",
-]
+markers = ["unit"]
 asyncio_mode = "strict"
 
 [tool.pydocstyle]
@@ -67,9 +65,7 @@ exclude = "^/alembic/versions/"
 
 [tool.pyright]
 include = ["app", "unit_tests", "integration_tests"]
-exclude = [
-  "**/__pycache__",
-]
+exclude = ["**/__pycache__"]
 
 [tool.ruff]
 select = ["E", "F", "D"]
@@ -87,7 +83,21 @@ select = ["E", "F", "D"]
 # D407 - Missing dashed underline after section
 # D413 - Missing blank line after last section
 # D415 - First line should end with a period, question mark, or exclamation point
-ignore = ["D100", "D103", "D104", "D107", "D202", "D203", "D212", "D400", "D401", "D406", "D407", "D413", "D415"]
+ignore = [
+  "D100",
+  "D103",
+  "D104",
+  "D107",
+  "D202",
+  "D203",
+  "D212",
+  "D400",
+  "D401",
+  "D406",
+  "D407",
+  "D413",
+  "D415",
+]
 line-length = 88
 
 # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
