Set PYTHONPATH as pwd

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Export PYTHONPATH
         run: |
           ls
-          echo "export PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
+          echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
           echo $PYTHONPATH
 
       - name: Trunk Check
