Enable trunk check and format as precommit

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -55,6 +55,7 @@ actions:
   disabled:
     - trunk-announce
     - trunk-check-pre-push
-    - trunk-fmt-pre-commit
   enabled:
+    - trunk-check-pre-commit
+    - trunk-fmt-pre-commit
     - trunk-upgrade-available
