Add write contents permissions for tag job

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -104,6 +104,8 @@ jobs:
 
   tag:
     needs: build
+    permissions:
+      contents: write
     uses: climatepolicyradar/reusable-workflows/.github/workflows/tag.yml@main
     with:
       repo-name: navigator-admin-backend
